fixed hero swiperjs height on mobile devices again

--- a/css/style.css
+++ b/css/style.css
@@ -516,10 +516,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y)) !important;
 }
 
-.calc-height-min{
-  height: auto;
-}
-
 .swiperProjects{
   background-color: #f4f3f167;
   padding-top: 0.5rem;
@@ -659,6 +655,14 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .h-10{
   height: 2.5rem;
+}
+
+.max-h-\[\]{
+  max-height: ;
+}
+
+.max-h-\[50vh\]{
+  max-height: 50vh;
 }
 
 .w-\[80\%\]{
@@ -1130,6 +1134,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
   .lg\:hidden{
     display: none;
+  }
+
+  .lg\:max-h-screen{
+    max-height: 100vh;
   }
 }
 
